atualização fornecedores.db {todos} - news script for sql

--- a/xml/xml_Viveo.ipynb
+++ b/xml/xml_Viveo.ipynb
@@ -291,10 +291,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "a51fab79-27ea-4296-9b34-e87885bb0179",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Planilha gerada em: C:\\Users\\dino.grejo\\OneDrive - VIVEO\\Documentos\\python\\Fatura_CTes_FOB.xlsx\n"
+     ]
+    }
+   ],
    "source": [
     "# SCRIPT IN PYTHON BY DINO GREJO - DINOGREJO@GMAIL.COM GITHUB: DGREJ\n",
     "\n",
@@ -437,7 +445,7 @@
     "import sqlite3\n",
     "\n",
     "# Passo 1: Carregar os dados do Excel\n",
-    "caminho_excel = r\"C:\\Users\\dino.grejo\\OneDrive - VIVEO\\Documentos\\python\\cod_fornecedores.xlsx\"  # Substitua pelo caminho do seu arquivo\n",
+    "caminho_excel = r\"C:\\Users\\dino.grejo\\OneDrive - VIVEO\\Documentos\\python\\fornecedores.xlsx\"  # Substitua pelo caminho do seu arquivo\n",
     "\n",
     "# Ler o arquivo Excel, forçando as colunas CNPJ_REMETENTE, cod e loja como texto\n",
     "df = pd.read_excel(caminho_excel, dtype={\n",
@@ -1262,7 +1270,105 @@
     "\n",
     "# Salvar e fechar\n",
     "conn.commit()\n",
-    "conn.close()"
+    "conn.close()        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0e53181",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "### Código Python para ler o SQLite e salvar como Excel**\n",
+    "\n",
+    "```python\n",
+    "import sqlite3\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Caminho para o seu banco de dados .db\n",
+    "db_path = 'seu_banco.db'  # ⚠️ substitua pelo nome do seu arquivo\n",
+    "\n",
+    "# Conecta ao banco de dados\n",
+    "conn = sqlite3.connect(db_path)\n",
+    "\n",
+    "# Lê os nomes das tabelas (opcional, para ver o que tem)\n",
+    "tabelas = pd.read_sql_query(\"SELECT name FROM sqlite_master WHERE type='table';\", conn)\n",
+    "print(\"Tabelas no banco:\", tabelas['name'].tolist())\n",
+    "\n",
+    "# Escolha a tabela que você quer exportar\n",
+    "nome_tabela = 'sua_tabela'  # ⚠️ substitua pelo nome da tabela desejada\n",
+    "\n",
+    "# Lê a tabela como DataFrame\n",
+    "df = pd.read_sql_query(f\"SELECT * FROM {nome_tabela};\", conn)\n",
+    "\n",
+    "# Fecha a conexão\n",
+    "conn.close()\n",
+    "\n",
+    "# Salva como arquivo Excel\n",
+    "excel_path = 'dados_exportados.xlsx'  # nome do arquivo de saída\n",
+    "df.to_excel(excel_path, index=False)  # index=False não inclui o índice numérico\n",
+    "\n",
+    "print(f\"Dados exportados para {excel_path}\")\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### ✅ **Explicação rápida:**\n",
+    "\n",
+    "- `sqlite3.connect()` → abre o banco `.db`\n",
+    "- `pd.read_sql_query()` → executa uma consulta SQL e transforma em tabela (DataFrame)\n",
+    "- `to_excel()` → salva como Excel\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 💡 Dica extra:\n",
+    "Se quiser exportar **todas as tabelas** do banco para **abas diferentes** do Excel:\n",
+    "\n",
+    "```python\n",
+    "with pd.ExcelWriter('todas_as_tabelas.xlsx') as writer:\n",
+    "    for tabela in tabelas['name']:\n",
+    "        df = pd.read_sql_query(f\"SELECT * FROM {tabela};\", conn)\n",
+    "        df.to_excel(writer, sheet_name=tabela, index=False)\n",
+    "```\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41d6318d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlite3\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Caminho para o seu banco de dados .db\n",
+    "db_path = 'C:/Users/dino.grejo/OneDrive - VIVEO/Documentos/python/fornecedores.db'  # substitua pelo caminho do seu arquivo\n",
+    "\n",
+    "# Conecta ao banco de dados\n",
+    "conn = sqlite3.connect(db_path)\n",
+    "\n",
+    "# Lê os nomes das tabelas (opcional, para ver o que tem)\n",
+    "tabelas = pd.read_sql_query(\"SELECT name FROM sqlite_master WHERE type='table';\", conn)\n",
+    "print(\"Tabelas no banco:\", tabelas['name'].tolist())\n",
+    "\n",
+    "# Escolha a tabela que você quer exportar\n",
+    "nome_tabela = 'fornecedores'  # substitua pelo nome da tabela desejada\n",
+    "\n",
+    "# Lê a tabela como DataFrame\n",
+    "df = pd.read_sql_query(f\"SELECT * FROM {nome_tabela};\", conn)\n",
+    "\n",
+    "# Fecha a conexão\n",
+    "conn.close()\n",
+    "\n",
+    "# Salva como arquivo Excel\n",
+    "excel_path = r'C:\\Users\\dino.grejo\\OneDrive - VIVEO\\Documentos\\python\\dados_exportados.xlsx'  # caminho e nome do arquivo de saída\n",
+    "df.to_excel(excel_path, index=False)  # index=False não inclui o índice numérico\n",
+    "\n",
+    "print(f\"Dados exportados para {excel_path}\")"
    ]
   }
  ],
